--- a/notebooks/Unofficial_First.ipynb
+++ b/notebooks/Unofficial_First.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "2c24c5cc-49b0-40b2-a885-0c65aa274634",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "19f6cb9b-e7cc-403a-b905-a62af86d88f2",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "fb50c9a9-9558-4ae1-97a8-e622c521313f",
    "metadata": {},
    "outputs": [
@@ -111,18 +111,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "9bf90cc6-ee19-4eae-81e9-88981a73a528",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing data for patient ID: 1.0, File: p017721.psv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# for patient_id, file_name in patient_id_map.items():\n",
     "#     print(type(dataset.loc[patient_id]))\n",
@@ -131,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "0e4ab624-7a23-4070-b00c-cfca8ebc9535",
    "metadata": {},
    "outputs": [],
@@ -150,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "id": "f03ff48c-1b03-45d6-8a9a-e6bffa7c7f2f",
    "metadata": {},
    "outputs": [],
@@ -214,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "id": "34b01ff8-e0f1-408d-8582-d1e35e53b6fc",
    "metadata": {},
    "outputs": [],
@@ -245,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "id": "3094ea18-fd79-4824-9ba9-06c5208a1435",
    "metadata": {},
    "outputs": [],
@@ -360,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "id": "d2975050-0b04-412e-bea6-a12702b2debc",
    "metadata": {},
    "outputs": [],
@@ -380,9 +372,7 @@
     "    # These are also the first set of features\n",
     "    # In this configutation 99 (66 + 33 or 3 per column) features to be precise\n",
     "    # They are also time indifferent\n",
-    "    print(temp)\n",
     "    features_A = np.array(temp)\n",
-    "    print(features_A)\n",
     "    # The team did not use DBP, not sure why, might investigate this\n",
     "    # columns = ['HR', 'O2Sat', 'SBP', 'MAP', 'Resp', 'DBP']\n",
     "    \n",
@@ -400,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "id": "55b8a3b1-2dbd-4a57-b3d1-e788e2e34604",
    "metadata": {},
    "outputs": [
@@ -408,103 +398,61 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     0      1      2       3      4     5     6    7    8     9    ...    128  \\\n",
-      "0   88.0  100.0  35.60  117.00  73.00  53.0   8.5  NaN -1.5   NaN  ...    NaN   \n",
-      "1   87.5  100.0  35.65  112.00  69.50  51.0  12.0  NaN -3.0   NaN  ...  -3.50   \n",
-      "2   88.0   99.0  36.20  103.00  65.00  49.0  14.0  NaN -3.0   NaN  ...  -4.50   \n",
-      "3   88.0   95.5  36.75   93.50  71.50  38.5  19.0  NaN  0.0   NaN  ...   6.50   \n",
-      "4   88.0   96.0  37.00  112.50  65.50  46.5  18.5  NaN  0.0   NaN  ...  -6.00   \n",
-      "5   88.0   99.0  37.05  123.00  73.00  51.5  15.0  NaN  0.0   NaN  ...   7.50   \n",
-      "6   88.0   99.0  36.95  103.00  58.50  40.5  12.0  NaN  0.0   NaN  ... -14.50   \n",
-      "7   88.0  100.0  37.00  133.00  78.00  52.0  16.0  NaN  0.0   NaN  ...  19.50   \n",
-      "8   88.0  100.0  36.90  100.00  61.00  44.0  12.0  NaN  0.0   NaN  ... -17.00   \n",
-      "9   88.0  100.0  36.90   96.00  58.00  42.0  12.0  NaN  0.0   NaN  ...  -3.00   \n",
-      "10  88.0   99.5  36.95   91.50  56.00  41.0  12.0  NaN  0.0   NaN  ...  -2.00   \n",
-      "11  88.0  100.0  36.80  112.00  64.00  42.0  17.0  NaN  0.0   NaN  ...   8.00   \n",
-      "12  88.0  100.0  36.90  101.00  58.00  39.0  13.0  NaN  0.0   NaN  ...  -6.00   \n",
-      "13  88.0  100.0  36.90   98.00  59.00  41.0  16.0  NaN  0.0  26.0  ...   1.00   \n",
-      "14  88.0  100.0  37.00  104.00  64.00  44.0  12.0  NaN  0.0  26.0  ...   5.00   \n",
-      "15  88.0  100.0  37.00  116.00  73.00  53.0  12.0  NaN  0.0  26.0  ...   9.00   \n",
-      "16  88.0  100.0  36.90  120.00  70.00  48.0  13.0  NaN  0.0  26.0  ...  -3.00   \n",
-      "17  88.0  100.0  36.90  105.00  62.00  43.0  17.0  NaN  0.0  26.0  ...  -8.00   \n",
-      "18  88.0   99.0  36.83  123.50  67.67  60.0  15.0  NaN  0.0  26.0  ...   5.67   \n",
-      "19  88.0   99.0  36.83  123.50  70.17  57.5  15.0  NaN  0.0  26.0  ...   2.50   \n",
-      "20  88.0   98.0  36.83  121.00  80.00  58.0  16.0  NaN  0.0  26.0  ...   9.83   \n",
-      "21  77.0  100.0  36.83  130.50  82.50  58.0  18.0  NaN  0.0  26.0  ...   2.50   \n",
-      "22  63.0   97.5  36.89  104.75  60.00  44.5  17.5  NaN  0.0  26.0  ... -22.50   \n",
-      "23  60.0   96.0  36.89   99.00  60.00  44.0  18.0  NaN  0.0  26.0  ...   0.00   \n",
-      "24  60.0   96.0  36.89   99.00  60.00  44.0  18.0  NaN  0.0  26.0  ...   0.00   \n",
-      "25  71.0   98.0  36.89  111.00  57.33  49.0  18.0  NaN  0.0  26.0  ...  -2.67   \n",
-      "26  73.0  100.0  36.61  126.50  72.00  50.0  17.0  NaN  0.0  26.0  ...  14.67   \n",
-      "27  74.0   99.0  36.61  113.00  62.00  41.0  21.0  NaN  0.0  26.0  ... -10.00   \n",
-      "\n",
-      "     129  130   131   132  133  134  135  136  137  \n",
-      "0    1.0  0.0   NaN   1.0  0.0  NaN  0.0 -1.0  NaN  \n",
-      "1    2.0  0.0  -2.0   2.0  0.0  3.5  0.0 -1.0  NaN  \n",
-      "2    3.0  0.0  -2.0   3.0  0.0  2.0  0.0 -1.0  NaN  \n",
-      "3    4.0  0.0 -10.5   4.0  0.0  5.0  0.0 -1.0  NaN  \n",
-      "4    5.0  0.0   8.0   5.0  0.0 -0.5  0.0 -1.0  NaN  \n",
-      "5    6.0  0.0   5.0   6.0  0.0 -3.5  0.0 -1.0  NaN  \n",
-      "6    7.0  0.0 -11.0   7.0  0.0 -3.0  0.0 -1.0  NaN  \n",
-      "7    8.0  0.0  11.5   8.0  0.0  4.0  0.0 -1.0  NaN  \n",
-      "8    9.0  0.0  -8.0   9.0  0.0 -4.0  0.0 -1.0  NaN  \n",
-      "9   10.0  0.0  -2.0  10.0  0.0  0.0  0.0 -1.0  NaN  \n",
-      "10  11.0  0.0  -1.0  11.0  0.0  0.0  0.0 -1.0  NaN  \n",
-      "11  12.0  0.0   1.0  12.0  0.0  5.0  0.0 -1.0  NaN  \n",
-      "12  13.0  0.0  -3.0  13.0  0.0 -4.0  0.0 -1.0  NaN  \n",
-      "13  14.0  0.0   2.0  14.0  0.0  3.0  0.0 -1.0  NaN  \n",
-      "14  15.0  0.0   3.0  15.0  0.0 -4.0  0.0 -1.0  NaN  \n",
-      "15  16.0  0.0   9.0  16.0  0.0  0.0  0.0 -1.0  NaN  \n",
-      "16  17.0  0.0  -5.0  17.0  0.0  1.0  0.0 -1.0  NaN  \n",
-      "17  18.0  0.0  -5.0  18.0  0.0  4.0  0.0 -1.0  NaN  \n",
-      "18  19.0  0.0  17.0  19.0  0.0 -2.0  0.0 -1.0  NaN  \n",
-      "19  20.0  0.0  -2.5  20.0  0.0  0.0  0.0 -1.0  NaN  \n",
-      "20  21.0  0.0   0.5  21.0  0.0  1.0  0.0 -1.0  NaN  \n",
-      "21  22.0  0.0   0.0  22.0  0.0  2.0  0.0 -1.0  NaN  \n",
-      "22  23.0  0.0 -13.5  23.0  0.0 -0.5  0.0 -1.0  NaN  \n",
-      "23  24.0  0.0  -0.5  24.0  0.0  0.5  0.0 -1.0  NaN  \n",
-      "24  24.0  1.0  -0.5  24.0  1.0  0.5  0.0 -1.0  NaN  \n",
-      "25  25.0  0.0   5.0  25.0  0.0  0.0  0.0 -1.0  NaN  \n",
-      "26  26.0  0.0   1.0  26.0  0.0 -1.0  0.0 -1.0  NaN  \n",
-      "27  27.0  0.0  -9.0  27.0  0.0  4.0  0.0 -1.0  NaN  \n",
-      "\n",
-      "[28 rows x 138 columns]\n",
-      "[[ 88.   100.    35.6  ...   0.    -1.      nan]\n",
-      " [ 87.5  100.    35.65 ...   0.    -1.      nan]\n",
-      " [ 88.    99.    36.2  ...   0.    -1.      nan]\n",
-      " ...\n",
-      " [ 71.    98.    36.89 ...   0.    -1.      nan]\n",
-      " [ 73.   100.    36.61 ...   0.    -1.      nan]\n",
-      " [ 74.    99.    36.61 ...   0.    -1.      nan]]\n"
+      "Processing data for patient ID: 40336.0, File: p107128.psv\r"
+     ]
+    },
+    {
+     "ename": "SyntaxError",
+     "evalue": "'return' outside function (4143131079.py, line 27)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[13], line 27\u001b[0;36m\u001b[0m\n\u001b[0;31m    return dat_features, dat_labels\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m 'return' outside function\n"
      ]
     }
    ],
    "source": [
+    "# Data Pre-processing\n",
+    "def preprecess_data():\n",
+    "    frames_features = []\n",
+    "    frames_labels = []\n",
+    "    \n",
+    "    for patient_id in set(dataset.index.get_level_values(0)):\n",
+    "        print(f\"Processing data for patient ID: {patient_id}, File: {patient_id_map[patient_id]}\", end='\\r')\n",
+    "        \n",
+    "        patient_data = dataset.loc[patient_id]\n",
+    "    \n",
+    "        features, labels = extract_features(patient_data)\n",
+    "        features = pd.DataFrame(features)\n",
+    "        labels = pd.DataFrame(labels)\n",
+    "    \n",
+    "        frames_features.append(features)\n",
+    "        frames_labels.append(labels)\n",
+    "    \n",
+    "    dat_features = np.array(pd.concat(frames_features))\n",
+    "    dat_labels = (np.array(pd.concat(frames_labels)))[:, 0]\n",
+    "    \n",
+    "    # Randomly shuffle the data\n",
+    "    index = [i for i in range(len(dat_labels))]\n",
+    "    np.random.shuffle(index)\n",
+    "    dat_features = dat_features[index]\n",
+    "    dat_labels = dat_labels[index]\n",
+    "    \n",
+    "    return dat_features, dat_labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dbc2b976-dced-4284-ac46-05e2f5239325",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Training the model\n",
     "\n",
-    "frames_features = []\n",
-    "frames_labels = []\n",
+    "from sklearn.model_selection import KFold\n",
+    "from sklearn.metrics import roc_auc_score, accuracy_score\n",
     "\n",
-    "for patient_id in set(dataset.index.get_level_values(0)):\n",
-    "    patient_data = dataset.loc[patient_id]\n",
-    "    print(f\"Processing data for patient ID: {patient_id}, File: {patient_id_map[patient_id]}\", end='\\r')\n",
-    "\n",
-    "    features, labels = extract_features(patient_data)\n",
-    "    features = pd.DataFrame(features)\n",
-    "    labels = pd.DataFrame(labels)\n",
-    "\n",
-    "    frames_features.append(features)\n",
-    "    frames_labels.append(labels)\n",
-    "\n",
-    "dat_features = np.array(pd.concat(frames_features))\n",
-    "dat_labels = (np.array(pd.concat(frames_labels)))[:, 0]\n",
-    "\n",
-    "# Randomly shuffle the data\n",
-    "index = [i for i in range(len(dat_labels))]\n",
-    "np.random.shuffle(index)\n",
-    "dat_features = dat_features[index]\n",
-    "dat_labels = dat_labels[index]\n",
-    "\n",
-    "return dat_features, dat_labels"
+    "\n"
    ]
   },
   {
