--- a/notebooks/Unofficial_First.ipynb
+++ b/notebooks/Unofficial_First.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "2c24c5cc-49b0-40b2-a885-0c65aa274634",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "19f6cb9b-e7cc-403a-b905-a62af86d88f2",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "fb50c9a9-9558-4ae1-97a8-e622c521313f",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "9bf90cc6-ee19-4eae-81e9-88981a73a528",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "0e4ab624-7a23-4070-b00c-cfca8ebc9535",
    "metadata": {},
    "outputs": [],
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "f03ff48c-1b03-45d6-8a9a-e6bffa7c7f2f",
    "metadata": {},
    "outputs": [],
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "34b01ff8-e0f1-408d-8582-d1e35e53b6fc",
    "metadata": {},
    "outputs": [],
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "3094ea18-fd79-4824-9ba9-06c5208a1435",
    "metadata": {},
    "outputs": [],
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "d2975050-0b04-412e-bea6-a12702b2debc",
    "metadata": {},
    "outputs": [],
@@ -390,29 +390,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "55b8a3b1-2dbd-4a57-b3d1-e788e2e34604",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing data for patient ID: 40336.0, File: p107128.psv\r"
-     ]
-    },
-    {
-     "ename": "SyntaxError",
-     "evalue": "'return' outside function (4143131079.py, line 27)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[13], line 27\u001b[0;36m\u001b[0m\n\u001b[0;31m    return dat_features, dat_labels\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m 'return' outside function\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Data Pre-processing\n",
-    "def preprecess_data():\n",
+    "def preprecess_data(dataset):\n",
     "    frames_features = []\n",
     "    frames_labels = []\n",
     "    \n",
@@ -427,32 +411,117 @@
     "    \n",
     "        frames_features.append(features)\n",
     "        frames_labels.append(labels)\n",
-    "    \n",
-    "    dat_features = np.array(pd.concat(frames_features))\n",
-    "    dat_labels = (np.array(pd.concat(frames_labels)))[:, 0]\n",
+    "\n",
+    "    data_features = np.array(pd.concat(frames_features))\n",
+    "    data_labels = (np.array(pd.concat(frames_labels)))[:, 0]\n",
     "    \n",
     "    # Randomly shuffle the data\n",
-    "    index = [i for i in range(len(dat_labels))]\n",
+    "    index = [i for i in range(len(data_labels))]\n",
     "    np.random.shuffle(index)\n",
-    "    dat_features = dat_features[index]\n",
-    "    dat_labels = dat_labels[index]\n",
+    "    data_features = data_features[index]\n",
+    "    data_labels = data_labels[index]\n",
     "    \n",
-    "    return dat_features, dat_labels"
+    "    return data_features, data_labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "614a16bf-ac7a-4a9c-9441-7d5f85345bd8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done with data pre-processingD: 40336.0, File: p107128.psv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Run the preprocess function\n",
+    "# features, labels = preprecess_data(dataset)\n",
+    "# print(\"Done with data pre-processing\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbc2b976-dced-4284-ac46-05e2f5239325",
+   "id": "8211a2f8-e7a9-47f4-923b-cc873410e93b",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "b60b7718-f9c3-4d90-9bb9-40da90e9c660",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fully copied function to downsample data\n",
+    "# Reason is it is quite simple and provides a great explanation as to why it is needed\n",
+    "def downsample(data_set):\n",
+    "    \"\"\"\n",
+    "    Using our feature extraction approach will result in over 1 million hours of data in the training process.\n",
+    "    However, only roughly 1.8% of these data corresponds to a positive outcome.\n",
+    "    Consequently, in order to deal with the serious class imbalance, a systematic way is provided by\n",
+    "    down sampling the excessive data instances of the majority class in each cross validation.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Runs preprocessing here (combined with loading)\n",
+    "    x, y = preprecess_data(data_set)\n",
+    "    index_0 = np.where(y == 0)[0]\n",
+    "    index_1 = np.where(y == 1)[0]\n",
+    "\n",
+    "    index = index_0[len(index_1): -1]\n",
+    "    x_del = np.delete(x, index, 0)\n",
+    "    y_del = np.delete(y, index, 0)\n",
+    "    index = [i for i in range(len(y_del))]\n",
+    "    np.random.shuffle(index)\n",
+    "    x_del = x_del[index]\n",
+    "    y_del = y_del[index]\n",
+    "\n",
+    "    return x_del, y_del"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "dbc2b976-dced-4284-ac46-05e2f5239325",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.01798467990800214\n"
+     ]
+    }
+   ],
    "source": [
     "# Training the model\n",
     "\n",
     "from sklearn.model_selection import KFold\n",
     "from sklearn.metrics import roc_auc_score, accuracy_score\n",
+    "import xgboost as xgb\n",
     "\n",
-    "\n"
+    "# Normally only ~1.8% has sepsis label 1\n",
+    "# print(sum(labels)/len(labels))\n",
+    "\n",
+    "# 5-fold cross validation was implemented and five XGBoost models were produced\n",
+    "kfold = KFold(n_splits=5, shuffle=True, random_state=np.random.seed(1337))\n",
+    "for (k, (train0_index, val0_index)), (k, (train1_index, val1_index)) in zip(enumerate(kfold.split(train_nosepsis)), enumerate(kfold.split(train_sepsis))):\n",
+    "    train_set = np.append(train_nosepsis[train0_index], train_sepsis[train1_index])\n",
+    "    x_train, y_train = downsample(train_set, data_path)\n",
+    "    \n",
+    "    val_set = np.append(train_nosepsis[val0_index], train_sepsis[val1_index])\n",
+    "    x_val, y_val = downsample(val_set, data_path)\n",
+    "    \n",
+    "    train_model(k, x_train, y_train, x_val, y_val, save_model_dir = '../models/saved/')\n",
+    "\n",
+    "\n",
+    "downsample(dataset)"
    ]
   },
   {
