Added first very simple xgboost model and its weights under models/saved/

--- a/notebooks/Unofficial_First.ipynb
+++ b/notebooks/Unofficial_First.ipynb
@@ -446,15 +446,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8211a2f8-e7a9-47f4-923b-cc873410e93b",
+   "execution_count": 22,
+   "id": "84b4d1c7-ab6e-457f-9c02-e058c086ba4f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.model_selection import KFold\n",
+    "from sklearn.metrics import roc_auc_score, accuracy_score, f1_score\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "import xgboost as xgb"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
+   "id": "8211a2f8-e7a9-47f4-923b-cc873410e93b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_model(X, y, kfold, save_dir):\n",
+    "    best_f1 = -1  # Initialize best score to a low value\n",
+    "    best_model = None  # Placeholder for the best model\n",
+    "    \n",
+    "    accuracies = []\n",
+    "    f1_scores = []\n",
+    "    \n",
+    "    for train_index, test_index in kfold.split(X):\n",
+    "        # Splitting the data for this fold\n",
+    "        X_train, X_test = X[train_index], X[test_index]\n",
+    "        y_train, y_test = y[train_index], y[test_index]\n",
+    "        \n",
+    "        # Optionally, standardize features\n",
+    "        scaler = StandardScaler().fit(X_train)\n",
+    "        X_train = scaler.transform(X_train)\n",
+    "        X_test = scaler.transform(X_test)\n",
+    "        \n",
+    "        # Initialize and train the XGBoost model\n",
+    "        model = xgb.XGBClassifier(use_label_encoder=False, eval_metric='logloss')\n",
+    "        model.fit(X_train, y_train)\n",
+    "        \n",
+    "        # Predictions\n",
+    "        y_pred = model.predict(X_test)\n",
+    "\n",
+    "        # Evaluate\n",
+    "        accuracy = accuracy_score(y_test, y_pred)\n",
+    "        f1 = f1_score(y_test, y_pred)\n",
+    "        accuracies.append(accuracy)\n",
+    "        f1_scores.append(f1)\n",
+    "\n",
+    "        print()\n",
+    "\n",
+    "        if f1 > best_f1:\n",
+    "            best_f1 = f1\n",
+    "            best_model = model\n",
+    "\n",
+    "    # After finding the best model, save it\n",
+    "    if best_model is not None:\n",
+    "        save_model_path = save_dir + 'model{}.mdl'.format(1)\n",
+    "        best_model.get_booster().save_model(fname=save_model_path)\n",
+    "        print(f\"Best model saved with F1 score: {best_f1}\")\n",
+    "    else:\n",
+    "        print(\"No model was saved.\")\n",
+    "    \n",
+    "    # Display average scores\n",
+    "    print(f\"Average Accuracy: {np.mean(accuracies):.4f}\")\n",
+    "    print(f\"Average F1 Score: {np.mean(f1_scores):.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "b60b7718-f9c3-4d90-9bb9-40da90e9c660",
    "metadata": {},
    "outputs": [],
@@ -487,7 +548,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
+   "id": "6e16499c-3934-4c9c-b813-6018d0f7742b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing data for patient ID: 40336.0, File: p107128.psv\r"
+     ]
+    }
+   ],
+   "source": [
+    "# Normally only ~1.8% has sepsis label 1\n",
+    "# print(sum(labels)/len(labels))\n",
+    "\n",
+    "\n",
+    "kfold = KFold(n_splits=5, shuffle=True, random_state=np.random.seed(1337))\n",
+    "\n",
+    "save_path = '../models/saved/'\n",
+    "\n",
+    "X, y = downsample(dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "id": "dbc2b976-dced-4284-ac46-05e2f5239325",
    "metadata": {},
    "outputs": [
@@ -495,33 +582,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.01798467990800214\n"
+      "Best model saved with F1 score: 0.8770700078857443\n",
+      "Average Accuracy: 0.8642\n",
+      "Average F1 Score: 0.8666\n"
      ]
     }
    ],
    "source": [
     "# Training the model\n",
     "\n",
-    "from sklearn.model_selection import KFold\n",
-    "from sklearn.metrics import roc_auc_score, accuracy_score\n",
-    "import xgboost as xgb\n",
-    "\n",
-    "# Normally only ~1.8% has sepsis label 1\n",
-    "# print(sum(labels)/len(labels))\n",
-    "\n",
-    "# 5-fold cross validation was implemented and five XGBoost models were produced\n",
-    "kfold = KFold(n_splits=5, shuffle=True, random_state=np.random.seed(1337))\n",
-    "for (k, (train0_index, val0_index)), (k, (train1_index, val1_index)) in zip(enumerate(kfold.split(train_nosepsis)), enumerate(kfold.split(train_sepsis))):\n",
-    "    train_set = np.append(train_nosepsis[train0_index], train_sepsis[train1_index])\n",
-    "    x_train, y_train = downsample(train_set, data_path)\n",
-    "    \n",
-    "    val_set = np.append(train_nosepsis[val0_index], train_sepsis[val1_index])\n",
-    "    x_val, y_val = downsample(val_set, data_path)\n",
-    "    \n",
-    "    train_model(k, x_train, y_train, x_val, y_val, save_model_dir = '../models/saved/')\n",
-    "\n",
-    "\n",
-    "downsample(dataset)"
+    "train_model(X, y, kfold, save_path)"
    ]
   },
   {
