--- a/notebooks/Unofficial_First.ipynb
+++ b/notebooks/Unofficial_First.ipynb
@@ -459,11 +459,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "id": "8211a2f8-e7a9-47f4-923b-cc873410e93b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Simple XGBoost model training\n",
+    "\n",
     "def train_model(X, y, kfold, save_dir):\n",
     "    best_f1 = -1  # Initialize best score to a low value\n",
     "    best_model = None  # Placeholder for the best model\n",
@@ -499,18 +501,19 @@
     "        if f1 > best_f1:\n",
     "            best_f1 = f1\n",
     "            best_model = model\n",
+    "            \n",
+    "    # Display average scores\n",
+    "    print(f\"Average Accuracy: {np.mean(accuracies):.4f}\")\n",
+    "    print(f\"Average F1 Score: {np.mean(f1_scores):.4f}\")\n",
     "\n",
     "    # After finding the best model, save it\n",
     "    if best_model is not None:\n",
-    "        save_model_path = save_dir + 'model{}.mdl'.format(1)\n",
+    "        save_model_path = save_dir + 'simple_xgboost_model{}.mdl'.format(1)\n",
     "        best_model.get_booster().save_model(fname=save_model_path)\n",
     "        print(f\"Best model saved with F1 score: {best_f1}\")\n",
     "    else:\n",
     "        print(\"No model was saved.\")\n",
-    "    \n",
-    "    # Display average scores\n",
-    "    print(f\"Average Accuracy: {np.mean(accuracies):.4f}\")\n",
-    "    print(f\"Average F1 Score: {np.mean(f1_scores):.4f}\")"
+    "    "
    ]
   },
   {
@@ -574,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "id": "dbc2b976-dced-4284-ac46-05e2f5239325",
    "metadata": {},
    "outputs": [
@@ -582,9 +585,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best model saved with F1 score: 0.8770700078857443\n",
-      "Average Accuracy: 0.8642\n",
-      "Average F1 Score: 0.8666\n"
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Best model saved with F1 score: 0.8717768195018921\n",
+      "Average Accuracy: 0.8634\n",
+      "Average F1 Score: 0.8658\n"
      ]
     }
    ],
@@ -663,154 +671,6 @@
     "\n",
     "# Best solution used sliding window"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "fce06dbb-c245-4fbe-9ee4-14fff851a2d0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def feature_missing_information(patient_data, columns):\n",
-    "    temp = patiend_data\n",
-    "    \n",
-    "    return temp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "a1a50a2b-c1fb-4d03-8d95-9a441eced99e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "HR\n",
-      "O2Sat\n",
-      "Temp\n",
-      "SBP\n",
-      "MAP\n",
-      "DBP\n",
-      "Resp\n",
-      "EtCO2\n",
-      "BaseExcess\n",
-      "HCO3\n",
-      "FiO2\n",
-      "pH\n",
-      "PaCO2\n",
-      "SaO2\n",
-      "AST\n",
-      "BUN\n",
-      "Alkalinephos\n",
-      "Calcium\n",
-      "Chloride\n",
-      "Creatinine\n",
-      "Bilirubin_direct\n",
-      "Glucose\n",
-      "Lactate\n",
-      "Magnesium\n",
-      "Phosphate\n",
-      "Potassium\n",
-      "Bilirubin_total\n",
-      "TroponinI\n",
-      "Hct\n",
-      "Hgb\n",
-      "PTT\n",
-      "WBC\n",
-      "Fibrinogen\n",
-      "Platelets\n",
-      "Age\n",
-      "Gender\n",
-      "Unit1\n",
-      "Unit2\n",
-      "HospAdmTime\n",
-      "ICULOS\n",
-      "SepsisLabel\n"
-     ]
-    }
-   ],
-   "source": [
-    "for patient_id in set(dataset.index.get_level_values(0)):\n",
-    "    patient_data = multiindex_df.loc[patient_id]\n",
-    "    print(f\"Processing data for patient ID: {patient_id}, File: {patient_id_map[patient_id]}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "1fd45fea-fcd6-4ff6-a873-8f0cb1d74d5c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Function to ectract features\n",
-    "\n",
-    "def extract_features(patient_data):\n",
-    "    # Get the column with Sepsis Label as it is not the same for each row (check documentation)\n",
-    "    labels = np.array(patient_data['SepsisLabel'])\n",
-    "    patient_data = patient_data.drop(columns=['SepsisLabel', 'TroponinI'])\n",
-    "\n",
-    "    # Gets information from the missing variables \n",
-    "    # This can be useful as it shows the clinical judgment, the test has not been ordered \n",
-    "    #                              (probably a good decision we should take into account)\n",
-    "    temp_data = feature_missing_information(patient_data, sep_col + con_col)\n",
-    "    temp = pd.DataFrame(temp_data)\n",
-    "    # To complete the data use forward-filling strategy\n",
-    "    temp = temp.fillna(method='ffill')\n",
-    "    # These are also the first set of features\n",
-    "    # In this configutation 66 features to be precise\n",
-    "    # They are also time indifferent\n",
-    "    features_A = np.array(temp)\n",
-    "    \n",
-    "\n",
-    "    # some code\n",
-    "    # Forward-Filling missing values\n",
-    "    data = data.fillna(method='ffill')\n",
-    "    \n",
-    "    return features, labels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "60e65180-1e29-4c5b-b326-1a4c1bd55adb",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'function' object has no attribute 'columns'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m c \u001b[38;5;129;01min\u001b[39;00m \u001b[43mdataset\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m:\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;28mprint\u001b[39m(c)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'function' object has no attribute 'columns'"
-     ]
-    }
-   ],
-   "source": [
-    "# Run feature extraction for each patient\n",
-    "\n",
-    "for c in dataset.columns:\n",
-    "    print(c)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "91e78e00-c2ca-44a5-a852-90ec02818979",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "62b1ed9b-9a12-4986-8bb3-6586eed290c0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
