--- a/notebooks/Unofficial_First.ipynb
+++ b/notebooks/Unofficial_First.ipynb
@@ -429,15 +429,7 @@
    "execution_count": 11,
    "id": "614a16bf-ac7a-4a9c-9441-7d5f85345bd8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done with data pre-processingD: 40336.0, File: p107128.psv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Run the preprocess function\n",
     "# features, labels = preprecess_data(dataset)\n",
@@ -446,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "84b4d1c7-ab6e-457f-9c02-e058c086ba4f",
    "metadata": {},
    "outputs": [],
@@ -459,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "id": "8211a2f8-e7a9-47f4-923b-cc873410e93b",
    "metadata": {},
    "outputs": [],
@@ -518,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "b60b7718-f9c3-4d90-9bb9-40da90e9c660",
    "metadata": {},
    "outputs": [],
@@ -551,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "6e16499c-3934-4c9c-b813-6018d0f7742b",
    "metadata": {},
    "outputs": [
@@ -577,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "id": "dbc2b976-dced-4284-ac46-05e2f5239325",
    "metadata": {},
    "outputs": [
@@ -590,9 +582,9 @@
       "\n",
       "\n",
       "\n",
-      "Best model saved with F1 score: 0.8717768195018921\n",
-      "Average Accuracy: 0.8634\n",
-      "Average F1 Score: 0.8658\n"
+      "Average Accuracy: 0.8638\n",
+      "Average F1 Score: 0.8660\n",
+      "Best model saved with F1 score: 0.8674225515578965\n"
      ]
     }
    ],
@@ -600,6 +592,76 @@
     "# Training the model\n",
     "\n",
     "train_model(X, y, kfold, save_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "081c6a0d-5752-4b56-9f0b-4a80ebd086c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'hyperopt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[40], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Hyperparameter optimization for the actual model:\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# Bayesian Optimization with the Tree-structured Parzen Estimator (TPE) algorithm\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mhyperopt\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m hp, fmin, tpe, STATUS_OK\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mBO_TPE\u001b[39m(X_train, y_train, X_val, y_val):\n\u001b[1;32m      7\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;124;03m    Hyperparameter optimization using Bayesian Optimization with TPE.\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'hyperopt'"
+     ]
+    }
+   ],
+   "source": [
+    "# Hyperparameter optimization for the actual model:\n",
+    "\n",
+    "# Bayesian Optimization with the Tree-structured Parzen Estimator (TPE) algorithm\n",
+    "from hyperopt import hp, fmin, tpe, STATUS_OK\n",
+    "\n",
+    "def BO_TPE(X_train, y_train, X_val, y_val):\n",
+    "    \"\"\"\n",
+    "    Hyperparameter optimization using Bayesian Optimization with TPE.\n",
+    "    \"\"\"\n",
+    "    train = xgb.DMatrix(X_train, label=y_train)\n",
+    "    val = xgb.DMatrix(X_val, label=y_val)\n",
+    "    X_val_D = xgb.DMatrix(X_val)\n",
+    "\n",
+    "    def objective(params):\n",
+    "        # Training and validation\n",
+    "        xgb_model = xgb.train(params, dtrain=train, num_boost_round=1000, evals=[(val, 'eval')],\n",
+    "                              verbose_eval=False, early_stopping_rounds=80)\n",
+    "        # Prediction\n",
+    "        y_vd_pred = xgb_model.predict(X_val_D, ntree_limit=xgb_model.best_ntree_limit)\n",
+    "        y_val_class = [0 if i <= 0.5 else 1 for i in y_vd_pred]\n",
+    "        # Evaluation\n",
+    "        loss = 1 - accuracy_score(y_val, y_val_class)\n",
+    "\n",
+    "        return {'loss': loss, 'status': STATUS_OK}\n",
+    "\n",
+    "    # Hyperparameter space\n",
+    "    space = {...}  # Define your space as before\n",
+    "\n",
+    "    # Optimization\n",
+    "    best = fmin(fn=objective, space=space, algo=tpe.suggest, max_evals=20)\n",
+    "    # Translate 'best' indices to actual values\n",
+    "    best_param = {param: values[best[param]] for param, values in zip(space.keys(), [max_depths, learning_rates, subsamples, colsample_bytrees, reg_alphas, reg_lambdas])}\n",
+    "\n",
+    "    return best_param\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "881f8311-ab6b-4ae0-a613-6a3e92281c87",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Actual model config used in the paper\n",
+    "\n",
+    "def train_actual_model():\n",
+    "    \n",
+    "    \n",
+    "    return None"
    ]
   },
   {
