--- a/notebooks/Unofficial_First.ipynb
+++ b/notebooks/Unofficial_First.ipynb
@@ -596,22 +596,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "id": "081c6a0d-5752-4b56-9f0b-4a80ebd086c2",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'hyperopt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[40], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Hyperparameter optimization for the actual model:\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# Bayesian Optimization with the Tree-structured Parzen Estimator (TPE) algorithm\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mhyperopt\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m hp, fmin, tpe, STATUS_OK\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mBO_TPE\u001b[39m(X_train, y_train, X_val, y_val):\n\u001b[1;32m      7\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;124;03m    Hyperparameter optimization using Bayesian Optimization with TPE.\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'hyperopt'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Hyperparameter optimization for the actual model:\n",
     "\n",
@@ -636,15 +624,38 @@
     "        # Evaluation\n",
     "        loss = 1 - accuracy_score(y_val, y_val_class)\n",
     "\n",
-    "        return {'loss': loss, 'status': STATUS_OK}\n",
+    "        return {'loss': loss, 'params': params, 'status': STATUS_OK}\n",
     "\n",
+    "    max_depths = [3, 4]\n",
+    "    learning_rates = [0.01, 0.02, 0.04, 0.06, 0.08, 0.1, 0.15, 0.2]\n",
+    "    subsamples = [0.5, 0.6, 0.7, 0.8, 0.9]\n",
+    "    colsample_bytrees = [0.5, 0.6, 0.7, 0.8, 0.9]\n",
+    "    reg_alphas = [0.0, 0.005, 0.01, 0.05, 0.1]\n",
+    "    reg_lambdas = [0.8, 1, 1.5, 2, 4]\n",
+    "    \n",
     "    # Hyperparameter space\n",
-    "    space = {...}  # Define your space as before\n",
+    "    space = {\n",
+    "        'max_depth': hp.choice('max_depth', max_depths),\n",
+    "        'learning_rate': hp.choice('learning_rate', learning_rates),\n",
+    "        'subsample': hp.choice('subsample', subsamples),\n",
+    "        'colsample_bytree': hp.choice('colsample_bytree', colsample_bytrees),\n",
+    "        'reg_alpha': hp.choice('reg_alpha', reg_alphas),\n",
+    "        'reg_lambda': hp.choice('reg_lambda', reg_lambdas),\n",
+    "    }\n",
     "\n",
     "    # Optimization\n",
     "    best = fmin(fn=objective, space=space, algo=tpe.suggest, max_evals=20)\n",
     "    # Translate 'best' indices to actual values\n",
-    "    best_param = {param: values[best[param]] for param, values in zip(space.keys(), [max_depths, learning_rates, subsamples, colsample_bytrees, reg_alphas, reg_lambdas])}\n",
+    "    best_param = {\n",
+    "        'max_depth': max_depths[(best['max_depth'])],\n",
+    "        'learning_rate': learning_rates[(best['learning_rate'])],\n",
+    "        'subsample': subsamples[(best['subsample'])],\n",
+    "        'colsample_bytree': colsample_bytrees[(best['colsample_bytree'])],\n",
+    "        'reg_alpha': reg_alphas[(best['reg_alpha'])],\n",
+    "        'reg_lambda': reg_lambdas[(best['reg_lambda'])]\n",
+    "    }\n",
+    "    \n",
+    "    # best_param = {param: values[best[param]] for param, values in zip(space.keys(), [max_depths, learning_rates, subsamples, colsample_bytrees, reg_alphas, reg_lambdas])}\n",
     "\n",
     "    return best_param\n"
    ]
