--- a/notebooks/Unofficial_First.ipynb
+++ b/notebooks/Unofficial_First.ipynb
@@ -632,6 +632,9 @@
     "    colsample_bytrees = [0.5, 0.6, 0.7, 0.8, 0.9]\n",
     "    reg_alphas = [0.0, 0.005, 0.01, 0.05, 0.1]\n",
     "    reg_lambdas = [0.8, 1, 1.5, 2, 4]\n",
+    "    gammas = [0, 0.1, 0.2, 0.5, 1]\n",
+    "    min_child_weights = [1, 5, 10, 20]\n",
+    "    \n",
     "    \n",
     "    # Hyperparameter space\n",
     "    space = {\n",
@@ -641,6 +644,8 @@
     "        'colsample_bytree': hp.choice('colsample_bytree', colsample_bytrees),\n",
     "        'reg_alpha': hp.choice('reg_alpha', reg_alphas),\n",
     "        'reg_lambda': hp.choice('reg_lambda', reg_lambdas),\n",
+    "        'gamma': hp.choice('gamma', gammas),\n",
+    "        'min_child_weight': hp.choice('min_child_weight', min_child_weights)\n",
     "    }\n",
     "\n",
     "    # Optimization\n",
@@ -652,7 +657,10 @@
     "        'subsample': subsamples[(best['subsample'])],\n",
     "        'colsample_bytree': colsample_bytrees[(best['colsample_bytree'])],\n",
     "        'reg_alpha': reg_alphas[(best['reg_alpha'])],\n",
-    "        'reg_lambda': reg_lambdas[(best['reg_lambda'])]\n",
+    "        'reg_lambda': reg_lambdas[(best['reg_lambda'])],\n",
+    "        'gamma': gammas[(best['gamma'])],\n",
+    "        'min_child_weight': min_child_weights[(best['min_child_weight'])]\n",
+    "        \n",
     "    }\n",
     "    \n",
     "    # best_param = {param: values[best[param]] for param, values in zip(space.keys(), [max_depths, learning_rates, subsamples, colsample_bytrees, reg_alphas, reg_lambdas])}\n",
@@ -669,10 +677,57 @@
    "source": [
     "# Actual model config used in the paper\n",
     "\n",
-    "def train_actual_model():\n",
-    "    \n",
-    "    \n",
-    "    return None"
+    "def train_actual_model(k, X_train, y_train, X_val, y_val, save_dir):\n",
+    "    print(\"Hyperparameter optimization\")\n",
+    "    # Finds the best hyperparameters\n",
+    "    best_param = BO_TPE(X_train, y_train, X_val, y_val)\n",
+    "    # Creates the XGBoost Classifier using the best found hyperparameters\n",
+    "    model = xgb.XGBClassifier(\n",
+    "        max_depth = best_param['max_depth'],\n",
+    "        eta = best_param['learning_rate'],\n",
+    "        n_estimators = 1000,\n",
+    "        subsample = best_param['subsample'],\n",
+    "        colsample_bytree = best_param['colsample_bytree'],\n",
+    "        reg_alpha = best_param['reg_alpha'],\n",
+    "        reg_lambda = best_param['reg_lambda'],\n",
+    "        gamma = best_param['gamma'],\n",
+    "        min_child_weight = best_param['min_child_weight'],\n",
+    "        objective = \"binary:logistic\"\n",
+    "    )\n",
+    "    # Fits the classifier\n",
+    "    model.fit(X_train, y_train, eval_set = [(X_val, y_val)], eval_metric='error', early_stopping_rounds=80, verbose=False)\n",
+    "\n",
+    "    # Printing training AUC and accurace\n",
+    "    y_tr_pred = (xgb_model.predict_proba(X_train, ntree_limit=xgb_model.best_ntree_limit))[:, 1]\n",
+    "    train_auc = roc_auc_score(y_train, y_tr_pred)\n",
+    "    print('training dataset AUC: ' + str(train_auc))\n",
+    "    y_tr_class = [0 if i <= 0.5 else 1 for i in y_tr_pred]\n",
+    "    acc = accuracy_score(y_train, y_tr_class)\n",
+    "    print('training dataset acc: ' + str(acc))\n",
+    "\n",
+    "    # Priting validation AUC and accuracy\n",
+    "    y_vd_pred = (xgb_model.predict_proba(X_val, ntree_limit=xgb_model.best_ntree_limit))[:, 1]\n",
+    "    valid_auc = roc_auc_score(y_val, y_vd_pred)\n",
+    "    print('validation dataset AUC: ' + str(valid_auc))\n",
+    "    y_val_class = [0 if i <= 0.5 else 1 for i in y_vd_pred]\n",
+    "    acc = accuracy_score(y_val, y_val_class)\n",
+    "    print('validation dataset acc: ' + str(acc))\n",
+    "\n",
+    "    save_model_path = save_dir + 'xgboost_model{}.mdl'.format(1)\n",
+    "    best_model.get_booster().save_model(fname=save_model_path)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97af9b30-ed8c-4e09-afe2-142e2e5748fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, y_train = downsample(dataset)\n",
+    "\n",
+    "train_actual_model(0, X_train, y_train, X_val,  y_val, save_path)"
    ]
   },
   {
