--- a/notebooks/Unofficial_First.ipynb
+++ b/notebooks/Unofficial_First.ipynb
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 54,
    "id": "081c6a0d-5752-4b56-9f0b-4a80ebd086c2",
    "metadata": {},
    "outputs": [],
@@ -626,7 +626,7 @@
     "\n",
     "        return {'loss': loss, 'params': params, 'status': STATUS_OK}\n",
     "\n",
-    "    max_depths = [3, 4, 5, 6, 7]\n",
+    "    max_depths = [3, 4, 5, 6, 7, 8, 9, 10, 11]\n",
     "    learning_rates = [0.01, 0.02, 0.04, 0.06, 0.08, 0.1, 0.15, 0.2]\n",
     "    subsamples = [0.5, 0.6, 0.7, 0.8, 0.9]\n",
     "    colsample_bytrees = [0.5, 0.6, 0.7, 0.8, 0.9]\n",
@@ -634,7 +634,7 @@
     "    reg_lambdas = [0.8, 1, 1.5, 2, 4]\n",
     "    gammas = [0, 0.1, 0.2, 0.5, 1]\n",
     "    min_child_weights = [1, 5, 10, 20]\n",
-    "    \n",
+    "    num_boost_rounds = [100, 200, 300, 400, 500, 600, 700, 800, 900, 1000, 1100, 1200, 1300, 1400, 1500]\n",
     "    \n",
     "    # Hyperparameter space\n",
     "    space = {\n",
@@ -645,7 +645,8 @@
     "        'reg_alpha': hp.choice('reg_alpha', reg_alphas),\n",
     "        'reg_lambda': hp.choice('reg_lambda', reg_lambdas),\n",
     "        'gamma': hp.choice('gamma', gammas),\n",
-    "        'min_child_weight': hp.choice('min_child_weight', min_child_weights)\n",
+    "        'min_child_weight': hp.choice('min_child_weight', min_child_weights),\n",
+    "        'num_boost_round': hp.choice('num_boost_round', num_boost_rounds)\n",
     "    }\n",
     "\n",
     "    # Optimization\n",
@@ -660,8 +661,8 @@
     "        'reg_alpha': reg_alphas[(best['reg_alpha'])],\n",
     "        'reg_lambda': reg_lambdas[(best['reg_lambda'])],\n",
     "        'gamma': gammas[(best['gamma'])],\n",
-    "        'min_child_weight': min_child_weights[(best['min_child_weight'])]\n",
-    "        \n",
+    "        'min_child_weight': min_child_weights[(best['min_child_weight'])],\n",
+    "        'num_boost_round': num_boost_rounds[(best['num_boost_round'])]\n",
     "    }\n",
     "    \n",
     "    return best_param\n"
@@ -669,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 57,
    "id": "881f8311-ab6b-4ae0-a613-6a3e92281c87",
    "metadata": {},
    "outputs": [],
@@ -684,7 +685,7 @@
     "    model = xgb.XGBClassifier(\n",
     "        max_depth = best_param['max_depth'],\n",
     "        eta = best_param['learning_rate'],\n",
-    "        n_estimators = 1000,\n",
+    "        n_estimators = best_param['num_boost_round'],\n",
     "        subsample = best_param['subsample'],\n",
     "        colsample_bytree = best_param['colsample_bytree'],\n",
     "        reg_alpha = best_param['reg_alpha'],\n",
@@ -712,6 +713,18 @@
     "    acc = accuracy_score(y_val, y_val_class)\n",
     "    print('validation dataset acc: ' + str(acc))\n",
     "    \n",
+    "    print(f\"Using following parameters:\\n\\\n",
+    "            max_depth : {best_param['max_depth']}\\n\\\n",
+    "            eta (learning rate) : {best_param['learning_rate']}\\n\\\n",
+    "            n_estimators : {best_param['num_boost_round']}\\n\\\n",
+    "            subsample : {best_param['subsample']}\\n\\\n",
+    "            colsample_bytree : {best_param['colsample_bytree']}\\n\\\n",
+    "            reg_alpha : {best_param['reg_alpha']}\\n\\\n",
+    "            reg_lambda ; {best_param['reg_lambda']}\\n\\\n",
+    "            gamma : {best_param['gamma']}\\n\\\n",
+    "            min_child_weight : {best_param['min_child_weight']}\\n\\\n",
+    "            objective : '\\binary:logistic'\")\n",
+    "    \n",
     "    save_model_path = save_dir + 'xgboost_model{}.mdl'.format(k + 1)\n",
     "    model.get_booster().save_model(fname=save_model_path)\n",
     "    "
@@ -733,6 +746,9 @@
    ],
    "source": [
     "# Load the data\n",
+    "\n",
+    "# We might do this each loop iteration\n",
+    "# Also consider changing the downsample function slightly \n",
     "X, y = downsample(dataset)\n",
     "\n",
     "kfold = KFold(n_splits=5, shuffle=True, random_state=np.random.seed(1337))"
@@ -740,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 58,
    "id": "351eed85-950a-4d40-a7aa-a98480c847c5",
    "metadata": {},
    "outputs": [
@@ -749,35 +765,90 @@
      "output_type": "stream",
      "text": [
       "Hyperparameter optimization\n",
-      "100%|███████████████████████████████████████████| 20/20 [03:19<00:00, 10.00s/trial, best loss: 0.09107190830124479]\n",
-      "training dataset AUC: 0.9977749701757868\n",
-      "training dataset acc: 0.9783728115345005\n",
-      "validation dataset AUC: 0.9598715225886787\n",
-      "validation dataset acc: 0.9009581803528253\n",
+      "100%|███████████████████████████████████████████| 20/20 [03:11<00:00,  9.59s/trial, best loss: 0.06949046297125461]\n",
+      "training dataset AUC: 0.9998948988546961\n",
+      "training dataset acc: 0.9956566515918148\n",
+      "validation dataset AUC: 0.9706548770954685\n",
+      "validation dataset acc: 0.9218232291573386\n",
+      "Using following parameters:\n",
+      "            max_depth : 9\n",
+      "            eta (learning rate) : 0.15\n",
+      "            n_estimators : 700\n",
+      "            subsample : 0.9\n",
+      "            colsample_bytree : 0.9\n",
+      "            reg_alpha : 0.01\n",
+      "            reg_lambda ; 1\n",
+      "            gamma : 0\n",
+      "            min_child_weight : 20\n",
+      "            objective : inary:logistic'\n",
       "Hyperparameter optimization\n",
-      "100%|███████████████████████████████████████████| 20/20 [02:37<00:00,  7.89s/trial, best loss: 0.09250470135219846]\n",
-      "training dataset AUC: 0.9999175606524995\n",
-      "training dataset acc: 0.9957909819549545\n",
-      "validation dataset AUC: 0.9682829009845398\n",
-      "validation dataset acc: 0.9151965612966777\n",
+      "100%|███████████████████████████████████████████| 20/20 [07:14<00:00, 21.72s/trial, best loss: 0.07226649950747743]\n",
+      "training dataset AUC: 0.9943993093091128\n",
+      "training dataset acc: 0.962477051896297\n",
+      "validation dataset AUC: 0.9462326841101095\n",
+      "validation dataset acc: 0.8798244828512581\n",
+      "Using following parameters:\n",
+      "            max_depth : 10\n",
+      "            eta (learning rate) : 0.04\n",
+      "            n_estimators : 200\n",
+      "            subsample : 0.5\n",
+      "            colsample_bytree : 0.5\n",
+      "            reg_alpha : 0.005\n",
+      "            reg_lambda ; 2\n",
+      "            gamma : 0\n",
+      "            min_child_weight : 1\n",
+      "            objective : inary:logistic'\n",
       "Hyperparameter optimization\n",
-      "100%|███████████████████████████████████████████| 20/20 [02:54<00:00,  8.75s/trial, best loss: 0.08587803349153755]\n",
-      "training dataset AUC: 0.9988895806430785\n",
-      "training dataset acc: 0.9845967850266422\n",
-      "validation dataset AUC: 0.9641521032390372\n",
-      "validation dataset acc: 0.9067789021223247\n",
+      "100%|███████████████████████████████████████████| 20/20 [03:26<00:00, 10.35s/trial, best loss: 0.07244559863884659]\n",
+      "training dataset AUC: 0.9986963093773727\n",
+      "training dataset acc: 0.9833430349706712\n",
+      "validation dataset AUC: 0.9646249278679679\n",
+      "validation dataset acc: 0.9014059281812483\n",
+      "Using following parameters:\n",
+      "            max_depth : 9\n",
+      "            eta (learning rate) : 0.15\n",
+      "            n_estimators : 100\n",
+      "            subsample : 0.9\n",
+      "            colsample_bytree : 0.9\n",
+      "            reg_alpha : 0.05\n",
+      "            reg_lambda ; 1.5\n",
+      "            gamma : 0\n",
+      "            min_child_weight : 1\n",
+      "            objective : inary:logistic'\n",
       "Hyperparameter optimization\n",
-      "100%|████████████████████████████████████████████| 20/20 [02:33<00:00,  7.66s/trial, best loss: 0.0945728103170339]\n",
-      "training dataset AUC: 0.999908968207334\n",
-      "training dataset acc: 0.9957463004007433\n",
-      "validation dataset AUC: 0.9602034469117586\n",
-      "validation dataset acc: 0.9071287838079886\n",
+      "100%|███████████████████████████████████████████| 20/20 [03:16<00:00,  9.82s/trial, best loss: 0.07110872290883041]\n",
+      "training dataset AUC: 0.9999325741168059\n",
+      "training dataset acc: 0.9964179371795733\n",
+      "validation dataset AUC: 0.9717826416711797\n",
+      "validation dataset acc: 0.9205624216371127\n",
+      "Using following parameters:\n",
+      "            max_depth : 9\n",
+      "            eta (learning rate) : 0.08\n",
+      "            n_estimators : 1100\n",
+      "            subsample : 0.5\n",
+      "            colsample_bytree : 0.9\n",
+      "            reg_alpha : 0.05\n",
+      "            reg_lambda ; 0.8\n",
+      "            gamma : 0\n",
+      "            min_child_weight : 10\n",
+      "            objective : inary:logistic'\n",
       "Hyperparameter optimization\n",
-      "100%|███████████████████████████████████████████| 20/20 [02:23<00:00,  7.17s/trial, best loss: 0.10093139888948599]\n",
-      "training dataset AUC: 0.9991019293843925\n",
-      "training dataset acc: 0.9860299550003359\n",
-      "validation dataset AUC: 0.9589606741509941\n",
-      "validation dataset acc: 0.8987999283539316\n"
+      "100%|███████████████████████████████████████████| 20/20 [04:47<00:00, 14.36s/trial, best loss: 0.07728819631022743]\n",
+      "training dataset AUC: 0.9828245876502744\n",
+      "training dataset acc: 0.9314930485593391\n",
+      "validation dataset AUC: 0.9361981646757912\n",
+      "validation dataset acc: 0.8607379545047465\n",
+      "Using following parameters:\n",
+      "            max_depth : 8\n",
+      "            eta (learning rate) : 0.06\n",
+      "            n_estimators : 300\n",
+      "            subsample : 0.5\n",
+      "            colsample_bytree : 0.5\n",
+      "            reg_alpha : 0.005\n",
+      "            reg_lambda ; 2\n",
+      "            gamma : 0\n",
+      "            min_child_weight : 10\n",
+      "            objective : inary:logistic'\n"
      ]
     }
    ],
