--- a/notebooks/Unofficial_First.ipynb
+++ b/notebooks/Unofficial_First.ipynb
@@ -723,7 +723,7 @@
     "            reg_lambda ; {best_param['reg_lambda']}\\n\\\n",
     "            gamma : {best_param['gamma']}\\n\\\n",
     "            min_child_weight : {best_param['min_child_weight']}\\n\\\n",
-    "            objective : '\\binary:logistic'\")\n",
+    "            objective : 'binary:logistic'\")\n",
     "    \n",
     "    save_model_path = save_dir + 'xgboost_model{}.mdl'.format(k + 1)\n",
     "    model.get_booster().save_model(fname=save_model_path)\n",
